phase0/manifests/http-echo-ingress-whitelist.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: "YOUR.IP.ADDRESS.HERE/32"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.yourname.mooo.com
      secretName: http-echo-tls
  rules:
    - host: api.yourname.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
